k8s/network/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: ui
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
